<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, StopwatchActivity!</string>
    <string name="app_name">Stopwatch</string>
    <string name="timer">00:00:00</string>
    <string name="startText">Start</string>
    <string name="resetText">Reset</string>
    <string name="stopText">Stop</string>
    <string name="saveText">Save</string>
    <string name="backgroundText">Stopwatch</string>
    <string name="lapText">Lap</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_timer">Timer</string>
    <string name="title_activity_stopwatch">Stopwatch</string>
    <string name="title_activity_wmptimer">WMP Timer</string>
    

</resources>