<?xml version="1.0" encoding="utf-8"?>
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
			<Button 
			style="@style/buttonText" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/saveText"
			android:textSize="20dp"
			android:onClick="saveClick"
			android:id="@+id/saveButton">
			</Button>
		<LinearLayout 
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:id="@+id/linearLayout">
				<LinearLayout 
				android:orientation="horizontal"
				android:gravity="center"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:id="@+id/timerBackground">
					<TextView
					style="@style/timerText" 
 					android:text="@string/timer"
 					android:id="@+id/timer">
					</TextView>
				</LinearLayout>
				<LinearLayout 
				android:orientation="horizontal"
				android:layout_gravity="center_horizontal"
				android:gravity="center"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp">
					<Button 
					style="@style/buttonText" 
					android:layout_marginLeft="5dp"
					android:layout_marginRight="5dp"
					android:text="@string/stopText"
					android:id="@+id/stopButton"
					android:onClick="stopClick"
					android:visibility="gone">
					</Button>
					<Button  
					style="@style/buttonText" 
					android:layout_marginLeft="5dp"
					android:text="@string/startText"
					android:onClick="startClick"
					android:id="@+id/startButton">
					</Button>
					<Button 
					style="@style/buttonText" 
					android:layout_marginRight="5dp"
					android:text="@string/resetText"
					android:onClick="resetClick"
					android:id="@+id/resetButton">
					</Button>	
				</LinearLayout>
				<LinearLayout 
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal">
					<ImageView 
					android:src="@drawable/hline"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:layout_marginTop="20dp"
					android:layout_marginBottom="10dp"
					android:layout_width="wrap_content">
					</ImageView>
				</LinearLayout>
					 <ListView
        			android:id="@+id/saved_list"
        			android:layout_width="match_parent"
        			android:layout_height="wrap_content" >
    				</ListView>

			</LinearLayout>	
	</RelativeLayout>
